--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,377 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+
+/* Global Styles */
+:root {
+  --primary-color: #dc3545;
+  --red-color: #fa6d7b;
+  --dark-color: #333333;
+  --light-color: #f4f4f4;
+  --blue-color: #2769be;
+  --light-blue-color: #4391f7;
+  --green-color: #77cc55;
+  --dark-green-color: #327916;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  line-height: 1.6;
+  background-color: #fff;
+  color: #333;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+img {
+  width: 100%;
+}
+
+/* utilities */
+.container {
+  max-width: 1100px;
+  margin: auto;
+  /* overflow: hidden; */
+  padding: 0 2rem;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.full-height {
+  min-height: 84vh;
+}
+
+.card {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
+  padding: 0.3rem;
+  width: 10rem;
+  border: 1px rgb(51, 51, 51, 0.3) solid;
+  border-radius: 10px;
+  margin: 0.5rem;
+}
+
+.green {
+  color: var(--green-color);
+}
+
+.lead {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+/* Header */
+.header {
+  background-color: var(--dark-color);
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding: 0.7rem 2rem;
+  z-index: 1;
+  width: 100%;
+  height: 8vh;
+  opacity: 0.9;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.logo-image {
+  width: 2.2rem;
+  height: 2.2rem;
+}
+
+.logo-name {
+  font-size: 2.2rem;
+  font-weight: bold;
+  color: var(--primary-color);
+}
+
+/* Home Page */
+.pokemon-image {
+  width: 8rem;
+  height: 8rem;
+}
+
+.pokemon-name {
+  color: var(--blue-color);
+  font-size: 1.1rem;
+  font-weight: 600;
+  margin: 0.3rem;
+  transition: opacity 0.2s ease-in;
+}
+
+.pokemon-name:hover {
+  color: var(--light-blue-color);
+}
+
+.home-type {
+  font-size: 0.8rem;
+  font-style: italic;
+  color: var(--green-color);
+  margin-right: 0.3rem;
+  transition: opacity 0.2s ease-in;
+}
+
+.home-type:hover {
+  color: var(--dark-green-color);
+}
+
+.home-search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-block: 1rem;
+}
+
+.home-search p {
+  color: var(--dark-color);
+}
+
+.home-search input {
+  width: 20rem;
+  font-size: 0.9rem;
+  border: 1px var(--primary-color) solid;
+  border-radius: 5px;
+  background-color: #f4f4f4;
+  padding: 0.3rem;
+  margin: 0 0.6rem;
+}
+
+/* Pokemon Page */
+.pokemon-stats {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 100%;
+  height: 100%;
+}
+
+.pokemon-stats img {
+  width: 40%;
+  height: 40%;
+  margin: 1rem;
+}
+
+.pokemon-stats table {
+  border-collapse: collapse;
+  width: 40%;
+  margin: 0.8rem;
+}
+
+.pokemon-stats table tr {
+  border-bottom: 1px rgb(51, 51, 51, 0.2) solid;
+}
+
+.pokemon-stats table th {
+  color: #949292;
+  text-align: left;
+  font-style: italic;
+  padding: 0.5rem 1rem;
+}
+
+.pokemon-stats table td {
+  font-weight: 600;
+}
+
+.type {
+  color: #fff;
+  background-color: var(--primary-color);
+  padding: 0.3rem;
+  margin: 0.3rem;
+  border-radius: 5px;
+  transition: opacity 0.2s ease-in;
+}
+
+.type:hover {
+  background-color: var(--red-color);
+}
+
+.ability {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.ability-span {
+  color: #fff;
+  background-color: var(--blue-color);
+  padding: 0.2rem;
+  margin: 0.2rem;
+  border-radius: 5px;
+}
+
+/* types */
+.types-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.types-filtered {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 60%;
+  border: 1px rgb(51, 51, 51) dotted;
+  border-radius: 10px;
+  padding: 0.3rem 2rem;
+  margin: 0.5rem;
+}
+
+.flex-types {
+  display: flex;
+  flex-direction: column;
+}
+
+.types-image {
+  width: 6rem;
+  height: 6rem;
+}
+
+.types-name {
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: var(--blue-color);
+}
+
+.types-filtered ul {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.types-filtered ul li {
+  margin: 0.3rem;
+}
+
+.types-experience {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+/* Alert */
+
+.alert {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 84vh;
+  background-color: rgb(51, 51, 51, 0.2);
+}
+
+.alert-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.1rem;
+  text-align: center;
+  width: 20rem;
+  height: 10rem;
+  padding: 0.7rem;
+  margin: 1rem 0;
+  opacity: 0.9;
+  background: var(--light-color);
+  color: #333;
+  border-radius: 10px;
+  box-shadow: 5px 5px grey;
+}
+
+/* not Found */
+.not-found {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 84vh;
+}
+/* Footer */
+.footer-content {
+  background-color: var(--dark-color);
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 8vh;
+}
+
+@media (max-width: 768px) {
+  .header {
+    height: 10vh;
   }
-  to {
-    transform: rotate(360deg);
+
+  .logo-image {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .logo-name {
+    font-size: 2rem;
+    font-weight: bold;
+    color: var(--primary-color);
+  }
+  .home-search {
+    flex-direction: column;
+  }
+  .home-search p {
+    padding-bottom: 0.3rem;
+  }
+  .home-search input {
+    width: 80%;
+  }
+  .pokemon-stats {
+    flex-direction: column;
+  }
+  .pokemon-stats img {
+    min-width: 60%;
+    min-height: 60%;
+    margin: 1rem;
+  }
+  .types-filtered {
+    width: 100%;
+    text-align: center;
+  }
+  .pokemon-stats table {
+    min-width: 100%;
+  }
+
+  .types-experience {
+    flex-direction: column;
+  }
+
+  .card {
+    flex-direction: row;
+    min-width: 100%;
+  }
+  .card li:nth-child(2) {
+    display: none;
   }
 }
